# drive-synergy-llm-bot

./: .env.local.example  .gitignore  AUDIT.md  CLAUDE.md  Dockerfile  HOWTO.md  README.md  RUNLOCAL.md  compose.yaml  logging.conf  pyproject.toml
docs/: system_docs.html
docs/diagrams/: 01_architecture.mmd  02_registration_sequence.mmd  03_search_sequence.mmd  04_summary_sequence.mmd  05_user_states.mmd  06_registration_activity.mmd  07_search_activity.mmd  08_i18n_flow.mmd
src/telegram_llm_bot/: main.py
src/telegram_llm_bot/config/: i18n.py  prompts.py  settings.py
src/telegram_llm_bot/handlers/: admin.py  commands.py  fallback.py  i18n_helpers.py  registration.py  search.py
src/telegram_llm_bot/matching/: agent.py
src/telegram_llm_bot/pipeline/: embedder.py  extractor.py  ingestion.py  parser.py
src/telegram_llm_bot/storage/: minio_client.py  mongo_client.py  weaviate_client.py
