[tool.poetry]
name = "telegram-llm-bot"
version = "0.2.0"
description = "Resume matchmaking bot for private Telegram communities"
authors = ["ma2za <mazzapaolo2019@gmail.com>"]
readme = "README.md"
packages = [{ include = "telegram_llm_bot", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# ── Telegram bot framework ────────────────────────────────────────────────────
python-telegram-bot = "^21.0"

# ── LLM — OpenRouter via OpenAI-compatible SDK ───────────────────────────────
openai = "^1.12.0"

# ── Embeddings (local, no API key needed) ────────────────────────────────────
sentence-transformers = "^2.7.0"

# ── Resume parsing ────────────────────────────────────────────────────────────
pymupdf = "^1.24.0"            # PDF  → fitz
python-docx = "^1.1.0"        # DOCX → python-docx
# Legacy .doc files are handled by the `antiword` system binary (see Dockerfile)

# ── Vector database ───────────────────────────────────────────────────────────
weaviate-client = "^4.5.0"

# ── Document storage ─────────────────────────────────────────────────────────
minio = "^7.2.5"

# ── Database ──────────────────────────────────────────────────────────────────
motor = "^3.3.2"               # async MongoDB driver
pymongo = "^4.6.1"

# ── Settings & validation ─────────────────────────────────────────────────────
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.1"

# ── Utilities ─────────────────────────────────────────────────────────────────
pyyaml = "^6.0.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
